[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfre"
version = "0.1.13"
description = "A Python library for estimating kidney failure risk using the KFRE model developed by Tangri et al."
readme = {file = "min_readme.md", content-type = "text/markdown"}
requires-python = ">=3.7.4"
license = {text = "MIT"}
authors = [
    {name = "Leonid Shpaner", email = "lshpaner@ucla.edu"},
]
dependencies = [
    "numpy>=1.18.5",
    "pandas>=1.0.5",
    "matplotlib>=3.2.2",
    "seaborn>=0.10.1",
    "scikit-learn>=0.23.1",
    "tqdm>=4.48.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Author Website" = "https://www.leonshpaner.com"
Documentation = "https://lshpaner.github.io/kfre/"
"Zenodo Archive" = "https://zenodo.org/records/11100222"
"Source Code" = "https://github.com/lshpaner/kfre"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
